--- a/KooliProjekt/Views/Clients/Index.cshtml
+++ b/KooliProjekt/Views/Clients/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<KooliProjekt.Data.Client>
+﻿@model PagedResult<KooliProjekt.Data.Client>
 
 @{
     ViewData["Title"] = "Index";
@@ -16,7 +16,7 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
+@foreach (var item in Model.Results) {
         <tr>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
@@ -27,3 +27,6 @@
 }
     </tbody>
 </table>
+
+
+@(await Component.InvokeAsync<PagerViewComponent>(Model))
