--- a/KooliProjekt/Views/Clients/Delete.cshtml
+++ b/KooliProjekt/Views/Clients/Delete.cshtml
@@ -4,18 +4,18 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<h1>Delete Client</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Are you sure you want to delete this client?</h3>
 <div>
-    <h4>Client</h4>
+    <h4>Client: @Model.Name</h4>
+    <p><strong>Location:</strong> @Model.Location</p>
     <hr />
-    <dl class="row">
-    </dl>
-    
-    <form asp-action="Delete">
+
+    <!-- Метод POST для отправки данных на сервер -->
+    <form method="post" asp-action="DeleteConfirmed" asp-route-id="@Model.Id">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Delete" class="btn btn-danger" />
+        <a asp-action="Index" class="btn btn-secondary">Back to List</a>
     </form>
 </div>
