--- a/KooliProjekt/Views/Structures/Index.cshtml
+++ b/KooliProjekt/Views/Structures/Index.cshtml
@@ -1,5 +1,4 @@
-﻿@model PagedResult<KooliProjekt.Data.Structure>
-
+﻿@model StructuresIndexModel
 @{
     ViewData["Title"] = "Index";
 }
@@ -9,8 +8,30 @@
 <p>
     <a asp-action="Create">Create New</a>
 </p>
+<form method="get">
+    <div class="form-group">
+        <label class="control-label">Märksõna</label>
+        <input asp-for="Search.Keyword" class="form-control" />
+    </div>
+    <div class="form-group">
+        <label class="control-label">Kõik itemid tehtud</label>
+        <select asp-for="Search.Done" class="form-control">
+            <option value="">-</option>
+            <option value="true">Jah</option>
+            <option value="false">Ei</option>
+        </select>
+    </div>
+    <div class="form-group">
+        <button class="btn btn-primary">Otsi</button>
+        <a asp-controller="TodoLists" asp-action="Index" class="btn btn-primary">Reset</a>
+    </div>
+</form>
 <table class="table">
     <thead>
+        <tr>
+            <th>@Html.DisplayNameFor(model => model.Data.Results[0].Location)</th>
+            <th></th>
+        </tr>
         <tr>
             <th>
                 Client_Ref
@@ -25,7 +46,7 @@
         </tr>
     </thead>
     <tbody>
-        @foreach (var item in Model.Results)
+        @foreach (var item in Model.Data.Results)
         {
         <tr>
             <td>
@@ -47,5 +68,5 @@
     </tbody>
 </table>
 
-@(await Component.InvokeAsync<PagerViewComponent>(Model))
+@(await Component.InvokeAsync<PagerViewComponent>(Model.Data))
 
