--- a/KooliProjekt/Views/Clients/Delete.cshtml
+++ b/KooliProjekt/Views/Clients/Delete.cshtml
@@ -13,7 +13,7 @@
     <hr />
 
     <!-- Метод POST для отправки данных на сервер -->
-    <form method="post" asp-action="DeleteConfirmed" asp-route-id="@Model.Id">
+    <form method="post" asp-action="Delete" asp-route-id="@Model.Id">
         <input type="hidden" asp-for="Id" />
         <input type="submit" value="Delete" class="btn btn-danger" />
         <a asp-action="Index" class="btn btn-secondary">Back to List</a>
